[package]
name = "efltk-sys"
version = "0.0.3"
authors = ["Artem V. Ageev <artem.v.ageev@gmail.com>"]
license = "LGPL-2.1-only"
repository = "https://github.com/theavege/efl-rs"
description = "Enlightenment Foundation Libraries bindings in Rust"
keywords = ["EFL", "enlightenment"]
categories = ["external-ffi-bindings"]
edition = "2024"
exclude = ["use"]

[build-dependencies]
bindgen = "0.72"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3"

[target.'cfg(target_os = "windows")'.build-dependencies]
glob = "0.3"
reqwest = { version = "0.13", features = ["json", "native-tls", "blocking"] }
